crates/cli/tests/snapshots/useless_parens__fix_dbf237a5ac629f60efb6cc28b28986f3e8f38ab97c28857a2b369399afce1c36.snap
---
source: crates/cli/tests/useless_parens.rs
expression: "\"[(builtins.map)]\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[(builtins.map)]
+[builtins.map]
