crates/cli/tests/snapshots/useless_parens__fix_e77035eacc5250b3a65353c52612eb4a05666249943f2d5c27329a9915a340a9.snap
---
source: crates/cli/tests/useless_parens.rs
expression: "\"({ f = 2; })\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-({ f = 2; })
+{ f = 2; }
