crates/cli/tests/snapshots/useless_parens__fix_ed0b445d7f4db791ac8dcf41de7d3bc416d22cc4154b5a58ff82ce1fed6fd3c0.snap
---
source: crates/cli/tests/useless_parens.rs
expression: "\"let a = 0; in (null)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let a = 0; in (null)
+null
