crates/cli/tests/snapshots/useless_parens__fix_f04dfa0b3c36c6f2489cba3b913db246cbacd0f646193435d7def64d8bbd9b10.snap
---
source: crates/cli/tests/useless_parens.rs
expression: "\"let b = 0; in (b)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let b = 0; in (b)
+let b = 0; in b
