crates/cli/tests/snapshots/useless_parens__lint_31ac41c8c6e98946b178fde2f6c5a168103df16fc12290ac3f38e5f12d9c67aa.snap
---
source: crates/cli/tests/useless_parens.rs
expression: "\"(\\\"hello\\\")\""
---
[08] Warning: These parentheses can be omitted
   ╭─[<temp_file_path>:1:1]
   │
 1 │ ("hello")
   · ────┬────  
   ·     ╰────── Useless parentheses around primitive expression
───╯
