crates/cli/tests/snapshots/useless_parens__lint_dbf237a5ac629f60efb6cc28b28986f3e8f38ab97c28857a2b369399afce1c36.snap
---
source: crates/cli/tests/useless_parens.rs
expression: "\"[(builtins.map)]\""
---
[08] Warning: These parentheses can be omitted
   ╭─[<temp_file_path>:1:2]
   │
 1 │ [(builtins.map)]
   ·  ───────┬──────  
   ·         ╰──────── Useless parentheses around primitive expression
───╯
